--- a/index.css
+++ b/index.css
@@ -8,36 +8,99 @@
     /* --cloud-dim: #ffee96ff;
     --cloud-bright: #f5753677; */
 }
-
-/* */
-main {
+html {
+    scroll-behavior: smooth;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color:#ffee96;
+    
 }
-header, section {
+section {
     max-width: 38rem;
     padding: 2rem;
     margin: auto;
     padding-bottom: 0;
 }/* thanks jrl.ninja */
+
+/* header */
 header {
+    width: 100%;
+    height: 100vh;
+}
+header > div.title {
     position: sticky;
-    top: 0;
+    top: 25vh;
+    margin-left: 20vw; /* left: 20vw; */
+    z-index: 2;
+}
+/* add cloud in front */
+header img {
+    position:absolute;
+    top: 40vh;
+    left: 40vw;
+    z-index: 4;
+    width: 40vw;
+    height: auto;
+    animation-duration: 5000ms;
+    animation-name: floating;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-direction: alternate-reverse;
+}
+@keyframes floating {
+    from {top: 40vh;}
+    50% {top: 42vh;}
+    to {top: 40vh;}
+}
+/* add cloud in back */
+
+/* mission statement */
+section#mission > p {
+    /* border-radius: 50%;
+    color: #2d282e;
+    background-color: #ffee96;
+    border-color: #f57536;
+    border-style: solid;
+    border-width: 0 1rem 1rem 0; */
+    position: relative;
+    left: 0;
+    top:0;
+    width:40%;
+    z-index: 2;
+}
+section#mission > img {
+    position: relative;
     right: 0;
-    margin-bottom: 10em;
+    bottom: 0;
+    z-index: 1;
+
 }
-footer {
-    overflow: hidden;
+textPath {
+    fill : #f57536;
 }
+path {
+    fill: none;
+    stroke: #f57536;
+}
+
 h1 {
     font-style: bold, italic;
-    text-shadow: #f57536 1px 1px, #f57536 2px 2px, #f57536 3px 3px, #f57536 4px 4px, #f57536 5px 5px, #f57536 6px 6px;
     font-size: 4em;
+    text-shadow: 
+        #f57536 1px 1px,
+        #f57536 2px 2px,
+        #f57536 3px 3px,
+        #f57536 4px 4px,
+        #f57536 5px 5px,
+        #f57536 6px 6px;
 }
 h2 {
     font-style: bold, italic;
-    text-shadow: #f57536 1px 1px, #f57536 2px 2px, #f57536 3px 3px, #f57536 4px 4px;
     font-size: 2em;
+    text-shadow:
+        #f57536 1px 1px,
+        #f57536 2px 2px,
+        #f57536 3px 3px,
+        #f57536 4px 4px;
 }
 p, ul {
     font-size: 1.5em;
@@ -56,35 +119,19 @@ body {
         #f57536 95%,
         #2d282e 100%
     );
+    scroll-behavior: smooth;
     overflow-x: hidden;
 }
 
-/* SVG stuff */
-.flying {
-    width: 40vw;
-    height: auto;
-    position: absolute;
-    right: 20vw;
-    top: 20vw;
+footer {
+    overflow: hidden;
 }
-.flying {
-    width: 40vw;
-    height: auto;
-    z-index: 1000;
-}
-.landed {
-    width: 80vw;
+footer > img {
+    width: 70vw;
     height: auto;
     position: relative;
-    right: -15vw;
+    left: 15vw;
     bottom: -4vh;
-}
-textPath {
-    fill : #ffee96;
-}
-path {
-    fill: none;
-    stroke: #ffee96;
 }
 
 /* The CSS part of the procedural single div cloud stuff */
@@ -94,7 +141,7 @@ path {
     width: var(--cloud-size);
     height: calc( var(--cloud-size) * 0.5);
     position: absolute;
-    top: 10vw;
+    top: 40vw;
     /* left: calc( var(--cloud-size) * -1.0); */
     /*- 100vw ); */
     z-index: 0;
