stripping out the noise

--- a/index.css
+++ b/index.css
@@ -1,10 +1,10 @@
 /* Cloud parameters */
 :root {
-    --cloud-size: 40vw;
+    --cloud-size: 50vw;
     --cloud-period: 45000ms;
     --cloud-fluffy: 2em;
-    --cloud-bright: #FFFF;
-    --cloud-dim: #5557;
+    --cloud-bright: #FFF;
+    --cloud-dim: #BBB;
     /* --cloud-dim: #ffee96ff;
     --cloud-bright: #f5753677; */
 }
@@ -12,16 +12,13 @@ html {
     scroll-behavior: smooth;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color:#ffee96;
-    
 }
-textPath {
-    fill : #ffee96;
+section {
+    max-width: 40rem;
+    padding: 2rem;
+    margin: auto;
+    /* padding-bottom: 0; */
 }
-path {
-    fill: none;
-    stroke: #ffee96;
-}
-
 h1 {
     font-style: bold, italic;
     font-size: 4em;
@@ -44,13 +41,8 @@ h2 {
 }
 p, ul {
     font-size: 1.25em;
-    /* max-width: 40rem;
-    padding: 2rem;
-    margin: auto;
-    padding-bottom: 0; */
 }
 body {
-    /* width: 100vw; */
     background: linear-gradient(180deg,
         #2d282e 0%,
         #215c9a 20%,
@@ -66,12 +58,6 @@ body {
     scroll-behavior: smooth;
     overflow-x: hidden;
 }
-/* section {
-    max-width: 40rem;
-    padding: 2rem;
-    margin: auto;
-    padding-bottom: 0;
-} */ /* thanks jrl.ninja */
 
 /* header */
 header {
@@ -80,17 +66,17 @@ header {
 }
 header > div.title {
     position: sticky;
-    top: 15vh;
+    top: 20vh;
     margin-left: 20vw; /* left: 20vw; */
     z-index: 2;
 }
 /* add cloud in front */
 header img {
     position: absolute;
-    top: 40vh;
-    left: 40vw;
+    top: 35vh;
+    left: 20vw;
     z-index: 4;
-    width: 40vw;
+    width: 60vw;
     height: auto;
     animation-duration: 5000ms;
     animation-name: floating;
@@ -105,57 +91,6 @@ header img {
 }
 /* add cloud in back */
 
-/* make all sections positioned, so the contents can be placed within them*/
-section {
-    position: relative;
-}
-
-/* mission statement */
-section#mission {
-    width: 100vw;
-    height: 50vh;
-}
-section#mission > p {
-    /* border-radius: 50%; */
-    color: #2d282e;
-    background-color: #ffee96;
-    border-color:#f57536;
-    /* background-color: var(--cloud-bright);
-    border-color: var(--cloud-dim); */
-    border-style: solid;
-    border-width: 0 0.5rem 0.5rem 0;
-    border-radius: 2em;
-    padding: 1em;
-    
-    position: absolute;
-    left: 30vw;
-    top: 15vh;
-    width: 50vw;
-    z-index: 1;
-}
-section#mission > img {
-    position: absolute;
-    left: 5vw;
-    top: 0vh;
-    width: 40vw;
-    z-index: 2;
-
-    animation-duration: 5000ms;
-    animation-name: floating;
-    animation-iteration-count: infinite;
-    animation-timing-function: ease-in-out;
-    animation-direction: alternate-reverse;
-}
-
-section#certifications {
-
-}
-section#certifications > svg {
-    position: relative;
-    left: 20vw;
-    width: 40vw;
-    height: auto;
-}
 
 footer {
     overflow: hidden;
@@ -165,7 +100,7 @@ footer > img {
     height: auto;
     position: relative;
     left: 15vw;
-    bottom: -4vh;
+    bottom: 0;/*-4vh;*/
 }
 
 /* The CSS part of the procedural single div cloud stuff */
@@ -176,6 +111,8 @@ footer > img {
     height: calc( var(--cloud-size) * 0.5);
     position: absolute;
     top: 50vh;
+    left: -100vw;
+    /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
     z-index: 0;
     background-color: transparent;
 }
@@ -185,7 +122,8 @@ footer > img {
     animation-duration: var(--cloud-period);
     animation-name: drift;
     animation-iteration-count: infinite;
-    animation-timing-function: linear;
+    animation-timing-function: ease-in-out;
+    /* animation-timing-function: linear; */
 }
 .dim {
     filter: url(#cloud-dim);
@@ -196,22 +134,20 @@ footer > img {
     /* animation-play-state: ; */
 }
 @keyframes drift {
-    from {
-        box-shadow: 100vw 0vw 2em 0px var(--cloud-bright);
-        left: calc( (var(--cloud-size) + 100vw) * -1.0 );
-    }
-    to {
-        box-shadow: 150vw 0vw 2em 0px var(--cloud-bright);
-        left: calc( -50vw + var(--cloud-size) );
+    0% { box-shadow: 100vw 0vw 2em 0px var(--cloud-bright); }
+    50% { box-shadow: 150vw 0vw 2em 0px var(--cloud-bright); }
+    100% { box-shadow: 100vw 0vw 2em 0px var(--cloud-bright);
+        /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
     }
 }
 @keyframes dim-drift {
-    from {
+    0% {
         box-shadow: 100vw 5vw 2em -60px var(--cloud-dim);
-        left: calc( (var(--cloud-size) + 100vw) * -1.0 );
+        /* left: calc( (var(--cloud-size) + 100vw) * -1.0 ); */
     }
-    to {
+    50% {
         box-shadow: 150vw 5vw 2em -60px var(--cloud-dim);
-        left: calc( -50vw + var(--cloud-size) );
+        /* left: calc( -50vw + var(--cloud-size) ); */
     }
+    100% { box-shadow: 100vw 5vw 2em -60px var(--cloud-dim); }
 }
