--- a/index.css
+++ b/index.css
@@ -10,16 +10,22 @@
 }
 html {
     scroll-behavior: smooth;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:#ffee96;
+    margin: 0;
 }
 section {
-    max-width: 40rem;
-    padding: 2rem;
+    max-width: 50em;
+    padding: 2em;
     margin: auto;
     /* padding-bottom: 0; */
+
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 50% 50%;
+    align-items: center;
 }
 h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#ffee96;
     font-style: bold, italic;
     font-size: 4em;
     text-shadow: 
@@ -31,6 +37,8 @@ h1 {
         #f57536 6px 6px;
 }
 h2 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#ffee96;
     font-style: bold, italic;
     font-size: 2em;
     text-shadow:
@@ -39,11 +47,28 @@ h2 {
         #f57536 3px 3px,
         #f57536 4px 4px;
 }
-p, ul {
-    font-size: 1.25em;
-}
+
 body {
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    margin: 0;
+}
+html {
     background: linear-gradient(180deg,
+        #2d282e 0%,
+        #215c9a 10%,
+        #2791d5 20%,
+        #4fa7e2 50%,
+        
+        #f3f5f9 75%,
+        #f5f7f7 80%,
+        #ffee96 85%,
+        #f6b65e 90%,
+        #f57536 95%,
+        #2d282e 100%,
+        #2d282e 100%
+    );
+    /* xxxbackground: linear-gradient(180deg,
         #2d282e 0%,
         #215c9a 20%,
         #2791d5 30%,
@@ -54,12 +79,19 @@ body {
         #f6b65e 90%,
         #f57536 95%,
         #2d282e 100%
-    );
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+    ); */
 }
 
-/* header */
+/* div.test {
+    background : linear-gradient(180deg,
+        #f5f7f7 0%,
+        #ffee96 25%,
+        #f6b65e 75%,
+        #f57536 95%,
+        #2d282e 100%
+    );
+} */
+
 header {
     width: 100%;
     height: 100vh;
@@ -90,17 +122,46 @@ header img {
     to {margin-top: 0vh;}
 }
 /* add cloud in back */
+/* maybe cloud should stick the whole way down and change color as sun sets...*/
 
+section > div {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.5em;
+    background-color: aliceblue;
+    color: navy;
+    padding: 1em;
+    border-radius: 1em;
+}
+
+section > h2 {
+    grid-row: 1 / 2;
+    grid-column: 1 / 3;
+}
+
+section#mission > img {
+    /* display: relative;
+    left: -10em; */
+    /* float: right; */
+    width: 20em;
+}
+
+section#credentials > img {
+    float: left;
+    width: 20em;
+}
 
 footer {
-    overflow: hidden;
+    position: relative;
+    width: 100%;
+    /* height: 100vh; */
+    /* overflow: hidden; */
 }
 footer > img {
     width: 70vw;
     height: auto;
     position: relative;
     left: 15vw;
-    bottom: 0;/*-4vh;*/
+    bottom: -4vh;
 }
 
 /* The CSS part of the procedural single div cloud stuff */
