--- a/index.css
+++ b/index.css
@@ -8,53 +8,15 @@
     /* --cloud-dim: #ffee96ff;
     --cloud-bright: #f5753677; */
 }
-html {
-    scroll-behavior: smooth;
-    margin: 0;
-}
-section {
-    max-width: 50em;
-    padding: 2em;
-    margin: auto;
-    /* padding-bottom: 0; */
 
-    display: grid;
-    grid-template-rows: auto auto;
-    grid-template-columns: 50% 50%;
-    align-items: center;
-}
-h1 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:#ffee96;
-    font-style: bold, italic;
-    font-size: 4em;
-    text-shadow: 
-        #f57536 1px 1px,
-        #f57536 2px 2px,
-        #f57536 3px 3px,
-        #f57536 4px 4px,
-        #f57536 5px 5px,
-        #f57536 6px 6px;
-}
-h2 {
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    color:#ffee96;
-    font-style: bold, italic;
-    font-size: 2em;
-    text-shadow:
-        #f57536 1px 1px,
-        #f57536 2px 2px,
-        #f57536 3px 3px,
-        #f57536 4px 4px;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-body {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-    margin: 0;
-}
 html {
-    background: linear-gradient(180deg,
+    scroll-behavior: smooth;
+    /* background: linear-gradient(180deg,
         #2d282e 0%,
         #215c9a 10%,
         #2791d5 20%,
@@ -67,34 +29,21 @@ html {
         #f57536 95%,
         #2d282e 100%,
         #2d282e 100%
-    );
-    /* xxxbackground: linear-gradient(180deg,
-        #2d282e 0%,
-        #215c9a 20%,
-        #2791d5 30%,
-        #4fa7e2 50%,
-        #f3f5f9 60%,
-        #f5f7f7 80%,
-        #ffee96 85%,
-        #f6b65e 90%,
-        #f57536 95%,
-        #2d282e 100%
     ); */
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 1.25em;
+    background-color: #2d282e;
 }
-
-/* div.test {
-    background : linear-gradient(180deg,
-        #f5f7f7 0%,
-        #ffee96 25%,
-        #f6b65e 75%,
-        #f57536 95%,
-        #2d282e 100%
-    );
-} */
 
 header {
     width: 100%;
     height: 100vh;
+    background: linear-gradient(180deg,
+        #2d282e 0%,
+        #215c9a 20%,
+        #2791d5 40%,
+        #4fa7e2 100%
+    );
 }
 header > div.title {
     position: sticky;
@@ -124,44 +73,104 @@ header img {
 /* add cloud in back */
 /* maybe cloud should stick the whole way down and change color as sun sets...*/
 
-section > div {
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.5em;
+main {
+    padding: 2em;
+    background: linear-gradient(180deg,
+        #4fa7e2 0%,
+        #f3f5f9 100%
+    );
+}
+
+section {
+    max-width: 50em;
+    padding: 2em;
+    margin: auto;
+    /* padding-bottom: 0; */
+
+    display: grid;
+    grid-template-rows: auto auto;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 2em;
+    align-items: center;
+}
+
+section > span, section > div {
     background-color: aliceblue;
     color: navy;
     padding: 1em;
     border-radius: 1em;
+    border-style: solid;
+    border-width: 0 0.5rem 0.5rem 0;
+    border-radius: 2em;
+    /* border-color: #f57536; */
+    border-color: #ffee96;
+}
+
+section > div {
+    grid-column: 1 / 3;
 }
 
 section > h2 {
+    justify-self: center;
     grid-row: 1 / 2;
     grid-column: 1 / 3;
 }
 
-section#mission > img {
-    /* display: relative;
-    left: -10em; */
-    /* float: right; */
-    width: 20em;
+section > svg {
+    width: 100%;
 }
 
-section#credentials > img {
-    float: left;
+section > img {
     width: 20em;
 }
 
 footer {
-    position: relative;
-    width: 100%;
-    /* height: 100vh; */
-    /* overflow: hidden; */
+    background: linear-gradient(180deg,
+        #f3f5f9 0%,
+        #f5f7f7 15%,
+        #ffee96 30%,
+        #f6b65e 45%,
+        #f57536 60%,
+        #2d282e 90%,
+        #2d282e 100%
+    );
 }
+
 footer > img {
-    width: 70vw;
-    height: auto;
     position: relative;
-    left: 15vw;
-    bottom: -4vh;
+    left: 5%;
+    width: 90%;
+    height: auto;
+}
+
+h1 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#ffee96;
+    font-style: bold, italic;
+    font-size: 4em;
+    text-shadow: 
+        #f57536 1px 1px,
+        #f57536 2px 2px,
+        #f57536 3px 3px,
+        #f57536 4px 4px,
+        #f57536 5px 5px,
+        #f57536 6px 6px;
+}
+
+h2 {
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:#ffee96;
+    font-style: bold, italic;
+    font-size: 2em;
+    text-shadow:
+        #f57536 1px 1px,
+        #f57536 2px 2px,
+        #f57536 3px 3px,
+        #f57536 4px 4px;
+}
+
+ul, p {
+    padding: 1em;
 }
 
 /* The CSS part of the procedural single div cloud stuff */
@@ -212,3 +221,18 @@ footer > img {
     }
     100% { box-shadow: 100vw 5vw 2em -60px var(--cloud-dim); }
 }
+
+textPath {
+    fill : #ffee96;
+}
+path {
+    fill: none;
+    stroke: #ffee96;
+}
+/* section {
+    max-width: 40rem;
+    padding: 2rem;
+    margin: auto;
+    padding-bottom: 0;
+}  */
+/* thanks jrl.ninja*/
